Changed the is_public? to is_public in the event migration (db/migrate/20150110104139_modify_columns_in_events.rb) in db/seeds.rb and in app/controllers/events_controller.rb, app/views/events/_form.html.erb, /index.html.erb, /index.json.jbuilder, /show.html.erb, /show.json.jbuilder

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing events</h1>
+<!-- <h1>Listing events</h1>
 
 <table>
   <thead>
@@ -20,28 +20,28 @@
   </thead>
 
   <tbody>
-    <% @events.each do |event| %>
+    <PPPPPPP% @events.each do |event| %>
       <tr>
-        <td><%= event.title %></td>
-        <td><%= event.public_description %></td>
-        <td><%= event.private_description %></td>
-        <td><%= event.date %></td>
-        <td><%= event.time %></td>
-        <td><%= event.location %></td>
-        <td><%= event.price %></td>
-        <td><%= event.max_attendances %></td>
-        <td><%= event.event_picture_url %></td>
-        <td><%= event.public_code %></td>
-        <td><%= event.private_code %></td>
-        <td><%= event.publico %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><PPPPPPP%= event.title %></td>
+        <td><PPPPPPP%= event.public_description %></td>
+        <td><PPPPPPP%= event.private_description %></td>
+        <td><PPPPPPP%= event.date %></td>
+        <td><PPPPPPP%= event.time %></td>
+        <td><PPPPPPP%= event.location %></td>
+        <td><PPPPPPP%= event.price %></td>
+        <td><PPPPPPP%= event.max_attendances %></td>
+        <td><PPPPPPP%= event.event_picture_url %></td>
+        <td><PPPPPPP%= event.public_code %></td>
+        <td><PPPPPPP%= event.private_code %></td>
+        <td><PPPPPPP%= event.publico %></td>
+        <td><PPPPPPP%= link_to 'Show', event %></td>
+        <td><PPPPPPP%= link_to 'Edit', edit_event_path(event) %></td>
+        <td><PPPPPPP%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
+    <PPPPPPP% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Event', new_event_path %>
+<PPPPPPP%= link_to 'New Event', new_event_path %> -->
