--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,65 +1,65 @@
-<%= form_for(@event) do |f| %>
+<!-- <%PPPPPPPPP= form_for(@event) do |f| %>
   <% if @event.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
+      <h2><%PPPPPPPPP= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
 
       <ul>
       <% @event.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <li><%PPPPPPPPP= message %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%PPPPPPPPP= f.label :title %><br>
+    <%PPPPPPPPP= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :public_description %><br>
-    <%= f.text_area :public_description %>
+    <%PPPPPPPPP= f.label :public_description %><br>
+    <%PPPPPPPPP= f.text_area :public_description %>
   </div>
   <div class="field">
-    <%= f.label :private_description %><br>
-    <%= f.text_area :private_description %>
+    <%PPPPPPPPP= f.label :private_description %><br>
+    <%PPPPPPPPP= f.text_area :private_description %>
   </div>
   <div class="field">
-    <%= f.label :date %><br>
-    <%= f.date_select :date %>
+    <%PPPPPPPPP= f.label :date %><br>
+    <%PPPPPPPPP= f.date_select :date %>
   </div>
   <div class="field">
-    <%= f.label :time %><br>
-    <%= f.time_select :time %>
+    <%PPPPPPPPP= f.label :time %><br>
+    <%PPPPPPPPP= f.time_select :time %>
   </div>
   <div class="field">
-    <%= f.label :location %><br>
-    <%= f.text_field :location %>
+    <%PPPPPPPPP= f.label :location %><br>
+    <%PPPPPPPPP= f.text_field :location %>
   </div>
   <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
+    <%PPPPPPPPP= f.label :price %><br>
+    <%PPPPPPPPP= f.text_field :price %>
   </div>
   <div class="field">
-    <%= f.label :max_attendances %><br>
-    <%= f.number_field :max_attendances %>
+    <%PPPPPPPPP= f.label :max_attendances %><br>
+    <%PPPPPPPPP= f.number_field :max_attendances %>
   </div>
   <div class="field">
-    <%= f.label :event_picture_url %><br>
-    <%= f.text_field :event_picture_url %>
+    <%PPPPPPPPP= f.label :event_picture_url %><br>
+    <%PPPPPPPPP= f.text_field :event_picture_url %>
   </div>
   <div class="field">
-    <%= f.label :public_code %><br>
-    <%= f.text_field :public_code %>
+    <%PPPPPPPPP= f.label :public_code %><br>
+    <%PPPPPPPPP= f.text_field :public_code %>
   </div>
   <div class="field">
-    <%= f.label :private_code %><br>
-    <%= f.text_field :private_code %>
+    <%PPPPPPPPP= f.label :private_code %><br>
+    <%PPPPPPPPP= f.text_field :private_code %>
   </div>
   <div class="field">
-    <%= f.label :publico %><br>
-    <%= f.check_box :publico %>
+    <%PPPPPPPPP= f.label :publico %><br>
+    <%PPPPPPPPP= f.check_box :publico %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%PPPPPPPPP= f.submit %>
   </div>
-<% end %>
+<% end %> -->
